0.1.4
- objects get metadata$units and metadata$flag

0.1.3
- add conveyor
- move landsat to oce (after more shrinking)
- add nao
- update levitus to the 2013 version of the atlas (was 2009)
- reduce landsat size by 3

0.1.2
- first version, with data moved from 'oce' version 0.9-12
