@@ -1,6 +1,6 @@
 Package: ocedata
 Version: 0.1.4
-Date: 2016-01-10
+Date: 2016-01-12
 Title: Oceanographic Datasets for Oce
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
