@@ -7,5 +7,6 @@ clean:
 install:
 	cp $(what).rda ../../data
 download:
-	curl http://data.giss.nasa.gov/gistemp/tabledata_v3/GLB.Ts+dSST.txt > giss-20151107.dat
+	curl http://data.giss.nasa.gov/gistemp/tabledata_v3/GLB.Ts+dSST.txt > giss.dat
+
 
