@@ -1,0 +1,168 @@
+        GLOBAL Land-Ocean Temperature Index in 0.01 degrees Celsius   base period: 1951-1980
+
+                    sources:  GHCN-v3 1880-11/2015 + SST: ERSST v4 1880-11/2015
+                    using elimination of outliers and homogeneity adjustment
+                    Notes: 1950 DJF = Dec 1949 - Feb 1950 ;  ***** = missing
+
+                                                                     AnnMean
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+1880   -29  -20  -18  -27  -14  -28  -22   -7  -16  -15  -18  -20    -19 ***   ****  -19  -19  -16  1880
+1881    -9  -13    2   -2   -4  -28   -5   -2   -8  -19  -25  -14    -11 -11    -14   -1  -12  -17  1881
+1882    10    9    2  -19  -17  -24   -9    4    0  -22  -20  -24     -9  -8      1  -11  -10  -14  1882
+1883   -33  -41  -17  -24  -25  -11   -7  -12  -18  -11  -19  -17    -20 -20    -33  -22  -10  -16  1883
+1884   -18  -11  -33  -35  -31  -37  -33  -25  -22  -21  -29  -28    -27 -26    -15  -33  -32  -24  1884
+1885   -64  -29  -23  -43  -41  -50  -28  -27  -19  -18  -21   -5    -31 -33    -40  -36  -35  -19  1885
+1886   -41  -45  -41  -29  -27  -38  -16  -31  -19  -24  -25  -24    -30 -28    -30  -32  -28  -23  1886
+1887   -65  -48  -31  -37  -33  -20  -18  -26  -19  -31  -25  -37    -32 -31    -46  -33  -21  -25  1887
+1888   -43  -42  -47  -28  -22  -20   -8  -10   -7    2    0  -11    -20 -22    -40  -32  -13   -2  1888
+1889   -19   15    5    5   -2  -11   -4  -17  -18  -21  -30  -29    -10  -9     -5    3  -11  -23  1889
+1890   -46  -46  -40  -37  -47  -27  -28  -35  -35  -22  -36  -29    -36 -36    -41  -42  -30  -31  1890
+1891   -45  -48  -14  -25  -16  -21  -21  -20  -13  -22  -36    0    -23 -26    -40  -18  -21  -24  1891
+1892   -25  -13  -35  -34  -24  -19  -26  -19  -24  -15  -49  -27    -26 -24    -13  -31  -21  -29  1892
+1893   -67  -50  -23  -32  -34  -22  -12  -22  -17  -15  -16  -36    -29 -28    -48  -29  -19  -16  1893
+1894   -54  -31  -20  -41  -29  -43  -31  -27  -21  -16  -24  -21    -30 -31    -40  -30  -33  -20  1894
+1895   -43  -42  -29  -22  -22  -24  -16  -15   -1  -10  -15  -11    -21 -22    -35  -24  -18   -9  1895
+1896   -22  -14  -29  -32  -19  -13   -5   -9   -4    5  -15  -11    -14 -14    -16  -27   -9   -5  1896
+1897   -22  -19  -11   -1    0  -12   -4   -3   -4   -8  -17  -25    -10  -9    -17   -4   -6  -10  1897
+1898    -6  -33  -55  -33  -36  -20  -22  -23  -19  -32  -35  -21    -28 -28    -21  -41  -22  -29  1898
+1899   -18  -39  -35  -21  -20  -26  -12   -3    0    1   12  -26    -16 -15    -26  -25  -14    4  1899
+1900   -39   -7    2  -14   -5  -14   -8   -3    2    9  -12  -13     -9 -10    -24   -6   -8    0  1900
+
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+1901   -29   -5    5   -6  -18  -10   -8  -12  -16  -29  -17  -29    -14 -13    -15   -6  -10  -20  1901
+1902   -20   -4  -29  -28  -31  -35  -25  -28  -21  -28  -36  -46    -28 -26    -17  -29  -30  -28  1902
+1903   -28   -7  -22  -40  -42  -44  -30  -43  -42  -41  -38  -47    -35 -35    -27  -35  -39  -40  1903
+1904   -64  -54  -47  -49  -50  -49  -48  -43  -46  -34  -16  -28    -44 -46    -55  -48  -47  -32  1904
+1905   -37  -58  -25  -36  -33  -31  -24  -20  -14  -22   -8  -20    -27 -28    -41  -31  -25  -15  1905
+1906   -30  -33  -14   -2  -20  -21  -25  -18  -25  -20  -38  -17    -22 -22    -27  -12  -21  -27  1906
+1907   -43  -52  -24  -40  -46  -43  -34  -36  -31  -24  -51  -49    -39 -37    -37  -37  -38  -35  1907
+1908   -45  -35  -57  -46  -40  -38  -34  -45  -32  -43  -50  -49    -43 -43    -43  -48  -39  -42  1908
+1909   -69  -46  -52  -58  -53  -51  -42  -29  -37  -38  -31  -54    -47 -46    -55  -54  -41  -35  1909
+1910   -44  -43  -48  -39  -34  -36  -31  -33  -36  -38  -56  -68    -42 -41    -47  -40  -33  -43  1910
+1911   -63  -60  -62  -55  -52  -47  -40  -42  -38  -25  -19  -25    -44 -48    -64  -56  -43  -27  1911
+1912   -27  -14  -37  -20  -19  -25  -40  -51  -47  -55  -38  -41    -35 -33    -22  -26  -39  -47  1912
+1913   -40  -43  -43  -36  -45  -45  -34  -32  -32  -34  -18   -3    -34 -37    -42  -41  -37  -28  1913
+1914     2  -14  -23  -27  -19  -22  -23  -14  -13   -4  -20   -9    -15 -15     -5  -23  -20  -12  1914
+1915   -19   -1   -8    8   -1  -14   -1  -14  -11  -22  -13  -25    -10  -9    -10   -1  -10  -15  1915
+1916   -20  -22  -30  -25  -26  -42  -32  -25  -28  -27  -42  -77    -33 -29    -22  -27  -33  -32  1916
+1917   -46  -55  -49  -39  -48  -39  -22  -25  -17  -34  -28  -71    -39 -40    -60  -45  -29  -27  1917
+1918   -43  -32  -21  -39  -36  -27  -20  -26  -14   -3  -15  -28    -25 -29    -49  -32  -24  -10  1918
+1919   -19  -21  -26  -18  -19  -27  -20  -19  -17  -15  -29  -34    -22 -21    -22  -21  -22  -20  1919
+1920   -14  -23   -6  -25  -25  -32  -30  -28  -19  -27  -32  -45    -26 -25    -24  -19  -30  -26  1920
+
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+1921    -3  -21  -27  -35  -35  -30  -14  -22  -16   -6  -16  -17    -20 -23    -23  -32  -22  -13  1921
+1922   -32  -41  -13  -21  -34  -31  -25  -30  -28  -31  -15  -16    -26 -26    -30  -22  -29  -25  1922
+1923   -26  -36  -30  -37  -32  -23  -27  -28  -27  -11    4   -3    -23 -24    -26  -33  -26  -11  1923
+1924   -22  -25  -12  -34  -18  -27  -25  -34  -29  -34  -22  -41    -27 -24    -17  -21  -29  -29  1924
+1925   -32  -33  -22  -23  -29  -32  -28  -17  -12  -16    4   12    -19 -23    -35  -25  -26   -8  1925
+1926    21    8   13  -14  -24  -24  -19  -10  -10  -11   -6  -29     -9  -5     13   -8  -18   -9  1926
+1927   -27  -19  -37  -31  -24  -26  -13  -19   -6    0   -3  -35    -20 -20    -25  -31  -19   -3  1927
+1928    -3  -11  -27  -28  -29  -40  -20  -24  -19  -18  -10  -20    -21 -22    -16  -28  -28  -16  1928
+1929   -47  -58  -35  -41  -38  -43  -32  -29  -23  -14  -15  -53    -36 -33    -41  -38  -34  -17  1929
+1930   -28  -23   -9  -24  -24  -18  -15   -9  -10   -8   14   -7    -13 -17    -35  -19  -14   -1  1930
+1931   -10  -20   -6  -20  -22   -5    1   -1   -6    0  -11   -9     -9  -9    -12  -16   -2   -6  1931
+1932    14  -17  -19   -8  -22  -29  -23  -23  -12   -9  -26  -22    -16 -15     -4  -16  -25  -16  1932
+1933   -31  -30  -27  -23  -25  -31  -19  -23  -26  -23  -32  -45    -28 -26    -27  -25  -24  -27  1933
+1934   -25   -3  -28  -26  -10  -13  -10   -9  -15  -10    0   -7    -13 -16    -24  -22  -11   -8  1934
+1935   -37   12  -13  -35  -25  -22  -18  -16  -17   -7  -28  -20    -19 -18    -11  -24  -19  -17  1935
+1936   -28  -39  -24  -20  -15  -18   -5  -11   -5   -2   -4   -2    -14 -16    -29  -20  -11   -3  1936
+1937    -7    7  -16  -16   -6   -7   -4    4   14   10   10   -9     -2  -1     -1  -13   -2   11  1937
+1938     3   -2    7    5   -7  -16   -8   -4    4   12    3  -23     -2  -1     -3    2   -9    6  1938
+1939   -11  -11  -19  -12   -7   -7   -4   -4    1   -2    7   41     -2  -8    -15  -13   -5    2  1939
+1940   -13    6   12   16    6    6   11    1   12    8   13   20      8  10     11   11    6   11  1940
+
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+1941    12   23    6   10   10    4   16   14    2   25   13   15     12  13     18    9   11   13  1941
+1942    28    6   11   13   14   11    2   -3    0    7   13   13     10  10     16   13    3    7  1942
+1943     0   22    2   14   10    0   15    3   12   31   26   29     14  12     12    9    6   23  1943
+1944    42   32   35   27   26   21   22   22   31   27   13    8     25  27     34   29   22   24  1944
+1945    15    5   11   24   10    3    7   26   21   22   10   -9     12  13      9   15   12   18  1945
+1946    16    6    0   11   -3  -15   -8  -10   -2   -6   -1  -27     -3  -2      4    3  -11   -3  1946
+1947    -8   -4    6    5   -6   -3   -4   -8  -14    7    0  -16     -4  -5    -13    2   -5   -3  1947
+1948     6  -12  -24  -10    6   -5  -13  -10  -13   -7   -9  -21     -9  -9     -7   -9  -10  -10  1948
+1949    10  -16   -1   -8  -11  -26  -13   -9   -9   -3   -9  -16     -9 -10     -9   -7  -16   -7  1949
+1950   -28  -27   -8  -21  -12   -8  -10  -19  -11  -19  -34  -19    -18 -18    -24  -14  -12  -21  1950
+1951   -34  -43  -20  -10   -2   -7   -2    6    4    9    1   16     -7 -10    -32  -11   -1    5  1951
+1952    16   13   -9    2   -5   -4    6    7    8   -3  -16   -2      1   3     15   -4    3   -4  1952
+1953     9   17   11   20    9    8    3    8    6    5   -5    4      8   7      8   14    6    2  1953
+1954   -27  -10  -12  -18  -20  -15  -16  -13   -7    0    9  -16    -12 -10    -11  -17  -15    0  1954
+1955    12  -21  -35  -22  -20   -7   -7    7  -14   -4  -28  -32    -14 -13     -8  -25   -2  -15  1955
+1956   -15  -24  -22  -27  -27  -15  -11  -26  -18  -24  -15   -9    -19 -21    -24  -25  -17  -19  1956
+1957   -13   -6   -6   -2    7   18    3   18    8    0    8   16      4   2     -9    0   13    5  1957
+1958    37   22    8    2    7   -6    3   -7   -5    3    2    0      6   7     25    6   -3    0  1958
+1959     6    8   20   16    5    3    5   -1   -5   -9   -9   -2      3   3      5   14    2   -8  1959
+1960    -2   13  -36  -17   -9    0   -3    0    4    7  -12   18     -3  -5      3  -20   -1    0  1960
+
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+1961     7   19   10   15   14   11   -3   -1    5   -1    2  -15      5   8     15   13    2    2  1961
+1962     7   15   11    5   -6    4   -3   -3   -2   -4    6   -2      2   1      2    3    0    0  1962
+1963    -3   18  -15   -5  -10    2    9   23   19   14   15   -1      6   6      5  -10   11   16  1963
+1964    -6  -12  -24  -31  -26   -9   -7  -23  -28  -30  -21  -30    -21 -18     -6  -27  -13  -26  1964
+1965    -9  -18  -12  -20  -14  -10  -11   -1  -13   -4   -6   -7    -10 -12    -19  -15   -7   -8  1965
+1966   -17   -1    4  -14   -9    2    8  -11   -2  -15   -3   -6     -5  -5     -8   -6    0   -7  1966
+1967    -8  -20    4   -6   12   -8   -1    2   -4    7   -6   -2     -3  -3    -11    3   -2   -1  1967
+1968   -23  -15   21   -5  -10   -6  -10  -11  -19   11   -5  -15     -7  -6    -13    2   -9   -4  1968
+1969   -11  -14    1   18   19    4   -2    3   10    9   11   27      6   3    -13   13    2   10  1969
+1970    10   23    8    9   -5   -2   -4  -10   11    5    1  -14      3   6     20    4   -5    6  1970
+1971    -3  -21  -19  -10   -7  -18  -13   -3    0   -6   -5   -8     -9 -10    -13  -12  -11   -3  1971
+1972   -26  -17    3   -1   -1    4    2   18    4    7    1   18      1  -1    -17    0    8    4  1972
+1973    27   31   25   26   26   16    9    2    6   12    5   -6     15  17     25   25    9    8  1973
+1974   -14  -28   -5  -10    0   -5   -3   11  -13   -7   -7  -10     -8  -7    -16   -5    1   -9  1974
+1975     8    7   15    6   17    0   -2  -21   -2   -9  -15  -17     -1  -1      1   12   -8   -9  1975
+1976    -1   -6  -21   -9  -23  -15  -10  -16   -9  -26   -6    8    -11 -13     -8  -17  -14  -14  1976
+1977    17   21   25   27   30   25   23   20    3    5   20    5     19  19     16   27   23    9  1977
+1978     8   13   22   14    7   -2    7  -19    6    2   18   11      7   7      9   14   -4    8  1978
+1979    15   -7   18   12    6   14    2   14   26   26   29   48     17  14      6   12   10   27  1979
+1980    30   42   29   33   35   18   29   26   23   19   29   20     28  30     40   32   24   23  1980
+
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+1981    55   41   49   32   23   31   35   33   18   14   22   40     33  31     39   35   33   18  1981
+1982     9   16   -2    9   15    4   13    9   16   13   13   43     13  13     21    7    9   14  1982
+1983    52   40   42   30   36   19   15   31   38   16   31   17     31  33     45   36   22   28  1983
+1984    31   17   29   10   34    6   15   15   19   15    3   -6     16  18     22   24   12   13  1984
+1985    21   -5   17   10   18   17    1   14   15   13   10   16     12  10      3   15   11   12  1985
+1986    30   38   29   25   26   13   13   12    1   14   10   15     19  19     28   27   13    9  1986
+1987    36   47   17   26   25   35   46   27   40   33   25   48     34  31     33   23   36   33  1987
+1988    58   42   49   44   44   42   35   44   40   37   11   33     40  41     49   46   40   30  1988
+1989    16   35   36   33   17   15   33   35   37   33   19   36     29  28     28   29   27   30  1989
+1990    40   40   76   54   45   37   43   30   29   42   45   41     44  43     39   58   37   39  1990
+1991    42   50   35   51   39   54   51   42   48   31   31   33     42  43     44   42   49   37  1991
+1992    45   42   46   23   32   24   13    9   -1   10    4   22     22  23     40   34   15    4  1992
+1993    37   38   36   27   26   23   26   14   10   22    7   19     24  24     32   30   21   13  1993
+1994    31    3   26   40   28   41   31   22   33   42   45   36     32  30     18   31   31   40  1994
+1995    51   78   45   46   29   44   49   49   34   49   44   30     46  46     55   40   47   42  1995
+1996    27   49   34   36   29   26   36   50   26   21   41   40     34  34     35   33   37   29  1996
+1997    32   37   51   37   38   54   36   41   56   64   65   59     48  46     37   42   44   62  1997
+1998    61   88   62   64   70   77   70   69   46   46   49   57     63  63     70   65   72   47  1998
+1999    48   67   33   34   32   37   41   35   43   42   40   47     42  43     57   33   38   42  1999
+2000    26   59   59   59   39   43   42   43   43   29   33   30     42  44     44   53   42   35  2000
+
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+2001    44   46   57   52   59   54   60   49   55   51   70   54     54  52     40   56   54   59  2001
+2002    74   76   90   58   65   55   61   54   64   56   59   42     63  64     68   71   57   60  2002
+2003    72   55   57   54   63   48   55   66   67   75   54   73     62  59     56   58   56   65  2003
+2004    58   69   65   62   42   42   27   45   53   66   72   51     54  56     67   56   38   63  2004
+2005    72   58   69   69   64   65   65   62   76   79   75   67     68  67     60   67   64   77  2005
+2006    56   71   63   49   47   64   55   71   64   70   73   77     63  62     65   53   63   69  2006
+2007    96   69   70   75   68   58   62   61   64   60   57   49     66  68     81   71   60   61  2007
+2008    26   35   74   53   51   47   60   44   64   67   67   54     54  53     37   59   51   66  2008
+2009    61   53   53   60   64   66   72   67   70   65   78   65     64  64     56   59   68   71  2009
+2010    73   79   92   87   75   64   61   65   62   71   79   49     72  73     72   85   63   71  2010
+2011    50   51   63   65   53   58   74   73   57   66   55   53     60  60     50   61   68   59  2011
+2012    45   48   57   68   76   62   56   63   74   79   74   51     63  63     49   67   60   76  2012
+2013    66   56   64   52   61   65   59   66   77   69   80   66     65  64     58   59   63   75  2013
+2014    73   50   77   78   86   66   58   82   90   85   68   78     74  73     63   80   68   81  2014
+2015    81   87   90   73   78   77   73   77   82  106  105 ****   ****  84     82   80   76   98  2015
+Year   Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec    J-D D-N    DJF  MAM  JJA  SON  Year
+       
+Divide by 100 to get changes in degrees Celsius (deg-C).
+Multiply that result by 1.8(=9/5) to get changes in degrees Fahrenheit (deg-F).
+
+Best estimate for absolute global mean for 1951-1980 is  14.0 deg-C or 57.2 deg-F,
+so add that to the temperature change if you want to use an absolute scale
+(this note applies to global annual means only, J-D and D-N !)
+
+Example      --      Table Value :      40
+                          change :    0.40 deg-C  or  0.72 deg-F
+abs. scale if global annual mean :   14.40 deg-C  or 57.92 deg-F
