@@ -1,5 +1,6 @@
 0.1.4
-- objects get metadata$units and metadata$flag
+- all index-type datasets are updated to the latest versions
+- oce datasets are rebuilt to get metadata$units and metadata$flag
 
 0.1.3
 - add conveyor
